--- a/templates/list.html
+++ b/templates/list.html
@@ -19,7 +19,7 @@
         </thead>
         <tbody>
             {% for package in packages %}
-            <tr>
+            <tr {% if package.is_dev %}class="dev"{% endif %}>
                 <th>{{ package.name }}</th>
                 <th>{{ package.is_dev }}</th>
                 <th>{{ package.total_third_deps }}</th>
