--- a/templates/list.html
+++ b/templates/list.html
@@ -89,13 +89,13 @@
         <table>
             <thead>
                 <tr>
-                    <th>package name</th>
-                    <th>dev?</th>
-                    <th>dependencies imported</th>
-                    <th>internal packages depending on this dependency</th>
-                    <th>LOC</th>
-                    <th>unsafe LOC</th>
-                    <th># of stars on github</th>
+                    <th>dependency name</th>
+                    <th>dev dependency?</th>
+                    <th>transitive dependencies imported</th>
+                    <th>imported by # workspace crates</th>
+                    <th>lines of code</th>
+                    <th>unsafe lines of code</th>
+                    <th>github stars</th>
                 </tr>
             </thead>
             <tbody>
