--- a/templates/list.html
+++ b/templates/list.html
@@ -100,23 +100,7 @@
                 </tr>
             </thead>
             <tbody>
-                {% for package in packages %}
-                <tr>
-                    <th>
-                        {% if package.repo.is_some() -%}
-                            <a href="{{ package.repo.as_deref().unwrap() }}">{{ package.name }}</a>
-                        {%- else -%}
-                            {{ package.name }}
-                        {%- endif %}
-                    </th>
-                    <th>{{ package.total_third_deps }}</th>
-                    <th>{{ package.total_new_third_deps }}</th>
-                    <th>{{ package.non_rust_loc }}</th>
-                    <th>{{ package.rust_loc }}</th>
-                    <th>{{ package.unsafe_loc }}</th>
-                    <th>{{ package.stargazers_count }}</th>
-                </tr>
-                {% endfor %}
+                
             </tbody>
         </table>
     </div>
@@ -125,6 +109,8 @@
         document.querySelector("#no_dev").addEventListener("click", () => {
             document.querySelectorAll(".dev").forEach((elem) => elem.classList.toggle("hide"));
         });
+
+        var json_result = {{ json_result }};
     </script>
 </body>
 
